[VD-85] add author info to GET `AuthorSubscriptions`
